--- a/mainapp/static/mainapp/css/audio.css
+++ b/mainapp/static/mainapp/css/audio.css
@@ -54,6 +54,7 @@
 #playerBackground {
     width: auto;
     /*background-color: rgba(255, 254, 255, 0.98);/* #3b3b3b;*/
+    background-color: rgba(245, 245, 245, 0.95);
     position: absolute;
 }
 
@@ -76,22 +77,7 @@
     padding: initial;
 }
 
-#menuDropdown {
-    position: absolute;
-    top: 100%;
-    left: -100px;
-    width: 160px;
-    z-index: 100;
-    /*-webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;*/
-    list-style: none;
-    padding: 0;
-    background: #323232;
-    display: none;
 
-}
 
 li {
     display: inline-block;
@@ -102,52 +88,15 @@ li:hover {
     background: #252525;
 }
 
+li:hover .menuElements {
+    color: white;
+}
+
 .menuElements {
     font: 15px Arial,Helvetica,sans-serif;
-	color: #e8e8e8;
+	color: black;/*#e8e8e8;*/
 	text-align: center;
     padding: 0 10px 0 10px;
-}
-
-#speaker {
-    width: 30px;
-    height: 30px;
-    left: -160%;
-    padding: 0;
-}
-
-#ball {
-    left: 110px;
-    margin: auto;
-	position: absolute;
-	top:0;
-	bottom: 0;
-    width: 20px;
-    height: 20px;
-    z-index: 10;
-    visibility: hidden;
-}
-#line {
-    background-color: #575757;
-    width: 100%;
-    height: 10px;
-    border-radius: 15px;
-    z-index: 0;
-    visibility: hidden;
-}
-
-#fillingLine {
-    background-color: #282828;
-    width: 100%;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    height: 12px;
-    border-radius: 15px;
-    z-index: 5;
-    margin: auto;
-	position: absolute;
-	visibility: hidden;
 }
 
 #draggingZone {
@@ -156,29 +105,15 @@ li:hover {
     z-index: 100;
 }
 
-#dropdown {
-    margin: auto;
-	position: absolute;
-    width: 30px;
-    height: 30px;
-    right: 5px;
-    top: 0;
-    bottom: 10px;
-}
 
-#progress {
-    height: 10px;
-    width: 100%;
-    top: 59px;
-}
 #progressLine {
     height: 100%;
     width: 100%;
-    background-color: #b5b5b5;
+    background-color: #d5d5d5;/*#d5d5d;*/
 }
 
 #progressBarLine {
-    background-color: #282828;/*#FFDA44;*/
+    background-color: black;/*#282828;*/ /*#FFDA44;*/
     width: 0%;
     left: 0%;
     height: 100%;
@@ -188,22 +123,3 @@ li:hover {
 	position: absolute;
 }
 
-#trackLength {
-    font: 15px Arial,Helvetica,sans-serif;
-	color: #e8e8e8;
-	text-align: right;
-	top: -20px;
-	right: 10px;
-	margin: auto;
-	position: absolute;
-}
-
-#playedTime {
-    font: 15px Arial,Helvetica,sans-serif;
-	color: #e8e8e8;
-	text-align: left;
-	top: -20px;
-	left: 10px;
-	margin: auto;
-	position: absolute;
-}
