--- a/loginsys/templates/loginsys/register.html
+++ b/loginsys/templates/loginsys/register.html
@@ -17,7 +17,7 @@
             <input type="password" name="password1" placeholder="Пароль">
             <input type="password" name="password2" placeholder="Повторите пароль">
             <input class="button" type="submit" name="register" value="Зарегистрироваться">
-            <span>Войти через</span>
+            <!-- <span>Войти через</span>-->
             <hr>
             <input type="submit" name="vk" value="Вконтакте">
         </div>
