--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     {% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'mainapp/css/font.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'mainapp/css/main.css' %}" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'mainapp/css/audio.css' %}" />
