--- a/loginsys/static/loginsys/css/registr.css
+++ b/loginsys/static/loginsys/css/registr.css
@@ -18,18 +18,20 @@ label
     /*background-color: rgba(201, 136, 214,0.1); /*rgba(200, 53, 229,0.7) прозрачность */
     height: 500px;
     width: 400px;
-    margin: 125px auto 0 auto;
+    margin: 200px auto 0 auto;
     text-align: center;
     z-index: 125;
 }
-
-
 form input
 {
     width: 300px;
     height: 30px;
     font-size: 15px;
     padding-left:15px; 
+}
+form input:last-child
+{
+    border-bottom: 1px;
 }
 form input[name="register"]
 {
@@ -47,6 +49,7 @@ form input[name="register"]:hover
 }
 form input[name="vk"]
 {
+    display: none;
     padding: 15px 0 30px 0;
     margin: 5px 0 20px 0;
     font-size: 15px;
@@ -66,10 +69,12 @@ form input[name="vk"]:hover
 }
 hr
 {
+    display: none;
     width: 350px;
 }
 span
 {
+    display: none;
     display: inline-block;
     position: relative;
     top: 17px;
