--- a/mainapp/static/mainapp/css/audio.css
+++ b/mainapp/static/mainapp/css/audio.css
@@ -51,7 +51,7 @@
 	background-color: black;
 }
 
-#playerBackground {
+#player {
     width: auto;
     /*background-color: rgba(255, 254, 255, 0.98);/* #3b3b3b;*/
     background-color: rgba(245, 245, 245, 0.95);
