--- a/mainapp/static/mainapp/css/audioFull.css
+++ b/mainapp/static/mainapp/css/audioFull.css
@@ -32,7 +32,7 @@
 	height: 15%;
 }
 
-#mainlogo {
+#mainLogo {
     top: -50%;
     width: 40%;
 	height: 40%;
@@ -45,7 +45,7 @@
 	visibility:visible;
 	z-index:15;
 }
-#mainlogo:hover {
+#mainLogo:hover {
 	width: 41%;
 	height: 41%;
 	box-shadow: 1px 5px 28px #ff3079;
@@ -158,7 +158,6 @@
     list-style: none;
     padding: 0;
     background: rgba(245, 245, 245, 0.95);/*#323232;*/
-    display: none;
     box-shadow: 0 6px 12px rgba(0,0,0,0.08), 0 10px 10px rgba(0,0,0,0.05);
 }
 
