--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -10,7 +10,7 @@
     <link id="playerCSS" rel="stylesheet" type="text/css" href="{% static 'mainapp/css/audioSmall.css' %}" />
     <title>{{track_name}}</title>
     <script src="{% static 'mainapp/js/jquery-3.3.1.js' %}"></script>
-    <script src="{% static 'mainapp/js/audio.js' %}"></script>
+    <!--<script src="{% static 'mainapp/js/audio.js' %}"></script>-->
     <script src="{% static 'mainapp/js/genremenu.js' %}"></script>
     <script src="{% static 'mainapp/js/bestperformer.js' %}"></script>
     <script src="{% static 'mainapp/js/topmonth.js' %}"></script>
@@ -81,57 +81,6 @@
     </footer>
     </div>
 
-    <div id="player">
-                <div class="Player" id="playerBackground"></div>
-
-                <div id="playerContainer">
-                    <div class="Button" id="mainlogo">
-
-                        <img id="logo" src="" draggable="false"/>  <!--src="{% static logo_link %}"-->
-
-                        <img class="Player" id="like" src="{% static 'mainapp/images/like.png' %}" draggable="false"/>
-                        <!--<div id="progressBar"></div>-->
-                    </div>
-                    <div id="menu">
-                        <img class="Button" id="menuPic" src="{% static 'mainapp/images/menu.png' %}" draggable="false"/>
-                        <ul id="menuDropdown">
-                            <li class="Button"><p class="menuElements">На страницу исполнителя</p></li>
-                            <li class="Button"><p class="menuElements">Добавить в избранное</p></li>
-                            <li class="Button"><p class="menuElements">Пожаловаться</p></li>
-                        </ul>
-                    </div>
-                    <p id="trackname">{{track_name}}</p>
-                    <p id="performername">{{performer_name}}</p>
-
-                    <img class="Player" id="maintoprevlogo" src="" draggable="false" /> <!--src="{% static logo_link %}"-->
-
-                    <img class="Player" src="" id="prevlogo" draggable="false" />
-
-                    <img class="Player" id="nextlogo" src="" draggable="false" /> <!--src="{% static nextlogo_link %}"-->
-
-                    <audio id="audio" ><source src="" type="audio/mpeg"/></audio> <!--src="{% static file_link %}"-->
-
-                    <img class="Button" id="playButton" src="{% static 'mainapp/images/playButton.png' %}" draggable="false" />
-                    <img class="Button" id="nextButton" src="{% static 'mainapp/images/nextButton.png' %}"  draggable="false"/>
-                    <img class="Button Player" id="previousButton" src="{% static 'mainapp/images/previousButton.png' %}" draggable="false" />
-
-                    <div id="volume">
-                        <div id="volumeBackground"></div>
-                        <div class="Player Button" id="draggingZone"></div>
-                        <img class="Button" id = "ball" src="{% static 'mainapp/images/circle.png' %}" draggable="false"/>
-                        <div class="Player Button" id="line"></div>
-                        <div id="fillingLine"></div>
-                    </div>
-                    <div id="speaker">
-                        <img class="Button" id="speakerPic" src="{% static 'mainapp/images/speaker100.png' %}" draggable="false"/></div>
-                </div>
-                <img class="Button" id="dropdown" src="{% static 'mainapp/images/dropdown.png' %}" draggable="false" />
-                <div class="Button" id ="progress">
-                    <p id="playedTime">0:00</p>
-                    <p id="trackLength"></p>
-                    <div class="Player Button" id="progressLine"></div>
-                    <div id="progressBarLine"></div>
-                </div>
-            </div>
+    {% include "mainapp/player.html" %}
 </body>
 </html>
