--- a/mainapp/static/mainapp/css/audioFull.css
+++ b/mainapp/static/mainapp/css/audioFull.css
@@ -1,6 +1,10 @@
 #playerContainer {
-	width: 450px;
-	height: 450px;
+	/*width: 450px;
+    height: 450px;*/
+    width: 600px;
+    height: 600px;
+    top: 0;
+    bottom: 20%;
     right: 0;
     position:absolute;
     left: 0;
@@ -11,16 +15,18 @@
     left: 0;
     margin: auto;
     top: 69px;
-    height: 450px;
-    width: 70%;
+    /*height: 450px;*/
+    /*width: 70%;*/
+    width: 100%;
+    height: 100%;
     position: fixed;
     box-shadow: 0 6px 12px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.13);
 }
 
 #playButton {
 	top: 45%;
-	width: 14%;
-	height: 14%;
+	width: 70px;
+	height: 70px;
     right: 0;
     bottom: 0;
     left: 0;
@@ -28,15 +34,16 @@
 	position: absolute;
 }
 #playButton:hover {
-	width: 15%;
-	height: 15%;
+	width: 72px;
+	height: 72px;
 }
 
 #mainLogo {
     top: -50%;
-    width: 40%;
-	height: 40%;
-	box-shadow: 0px 4px 28px black/*#64bdf5;*/;
+    width: 45%;
+    height: 45%;
+    border-radius: 50%;
+	box-shadow: 0px 4px 28px rgba(0, 0, 0, .5)/*#64bdf5;*/;
     right: 0;
     bottom: 0;
     left: 0;
@@ -46,23 +53,25 @@
 	z-index:15;
 }
 #mainLogo:hover {
-	width: 41%;
-	height: 41%;
+	width: 47%;
+	height: 47%;
 	box-shadow: 1px 5px 28px #ff3079;
 }
 
 #logo {
     width: 100%;
-	height: 100%;
+    height: 100%;
+    border-radius: 50%;
 	z-index:0;
 }
 
 #nextlogo {
 	top: -50%;
     right: -100%;
-	opacity: 0.3;
+	opacity: 0.6;
 	width: 25%;
-	height: 25%;
+    height: 25%;
+    border-radius: 50%;
 }
 
 #maintoprevlogo {
@@ -76,16 +85,16 @@
 #prevlogo {
 	top: -50%;
     left: -100%;
-	opacity: 0.3;
+	opacity: 0.6;
 	width: 25%;
 	height: 25%;
-	visibility: hidden;
+    border-radius: 50%;
 }
 
 #nextButton {
     top: 45%;
-    width: 12%;
-    height: 12%;
+    width: 50px;
+    height: 50px;
     right: -90%;
     bottom: 0;
     left: 0;
@@ -93,8 +102,8 @@
 	position: absolute;
 }
 #nextButton:hover {
-	width: 13%;
-	height: 13%;
+	width: 52px;
+	height: 52px;
 }
 
 
@@ -108,10 +117,10 @@
 #trackname {
 	font: 28px Arial,Helvetica,sans-serif;
 	color: rgb(0, 0, 0);
-	text-align:center;
+    text-align:center;
+    height: 32px;
 	top: 55%;
     right: 0;
-    bottom: 0;
     left: 0;
     margin: auto;
 	position: absolute;
@@ -120,10 +129,10 @@
 #performername {
 	font: 20px Arial,Helvetica,sans-serif;
 	color: rgb(89, 89, 89);
-	text-align: center;
+    text-align: center;
+    height: 32px;
 	top: 50%;
     right: 0;
-    bottom: 0;
     left: 0;
     margin: auto;
 	position: absolute;
@@ -138,8 +147,8 @@
 
 #menu {
     z-index: 5;
-    width: 10%;
-    height: 10%;
+    width: 50px;
+    height: 50px;
     right: 0;
     left: -110%;
     top: 0;
@@ -185,10 +194,10 @@
     padding: initial;
 }
 
-#volume {
+#fullVolume {
     top: 80%;
-    height: 8%;
-    width: 150px;
+    height: 32px;
+    width: 180px;
     right: 0;
     bottom: 0;
     left: 0;
@@ -253,17 +262,23 @@
 
 #dropdown {
     margin: auto;
-	position: absolute;
+	position: fixed;
     width: 30px;
     height: 30px;
     right: 15px;
-    top: 15px;
+    top: 84px;
+}
+#dropdown:hover {
+    top: 83px;
+    right: 14px;
+	width: 32px;
+	height: 32px;
 }
 
 #progress {
     height: 4px;
     width: 100%;
-    top: 100%;
+    bottom: 69px;
     margin: auto;
     position: absolute;
 }
