--- a/mainapp/static/mainapp/css/audioFull.css
+++ b/mainapp/static/mainapp/css/audioFull.css
@@ -63,7 +63,18 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-	z-index:0;
+    z-index:0;
+    position: absolute;
+    transition: all 0.5s linear;
+}
+
+#vinyl {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    z-index:5;
+    position: absolute;
+    opacity: 0.3;
 }
 
 #nextlogo {
