--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title id="title">{{track_name}}</title>
     <script src="{% static 'mainapp/js/jquery-3.3.1.js' %}"></script>
+    <script src="{% static 'mainapp/js/getCookie.js' %}"></script>
     <script src="{% static 'mainapp/js/vue.js' %}"></script>
     <script src="{% static 'mainapp/js/vue-resource.js' %}"></script>
     <!--<script src="{% static 'mainapp/js/genremenu.js' %}"></script>-->
