--- a/mainapp/templates/mainapp/loader-music.html
+++ b/mainapp/templates/mainapp/loader-music.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'mainapp/css/loader-music.css' %}" type="text/css">
     <script src="{% static 'mainapp/js/jquery-3.3.1.js' %}"></script>
+    <script src="{% static 'mainapp/js/getCookie.js' %}"></script>
     <script src="{% static 'mainapp/js/vue.js' %}"></script>
     <script src="{% static 'mainapp/js/vue-resource.js' %}"></script>
 </head>
